--- a/index.html
+++ b/index.html
@@ -1000,6 +1000,8 @@
   <script src="js/google-map.js"></script>
   
   <script src="js/main.js"></script>
+	  
+  <script>$('.navbar-nav>li>a , .dropdown-menu>a').on('click', function(){if(this.id != 'navbarDropdown'){$('.navbar-collapse').collapse('hide');}});</script>
     
   </body>
 </html>
